# ZeroTV

./: .editorconfig  .gitignore  .prettierignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETTINGS.md  LICENSE  README.md  SECURITY.md  angular.json  package.json  sample.m3u
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: app.css  app.html  app.ts
src/app/components/channel-list/: channel-list.component.ts
src/app/components/loading-skeleton/: loading-skeleton.component.ts
src/app/components/toast/: toast.component.ts
src/app/components/video-player/: video-player.component.ts
src/app/models/: channel.model.ts
src/app/services/: epg.service.ts  hotkey.service.ts  logo-cache.service.ts  m3u-parser.service.ts  player.service.ts  storage.service.ts  toast.service.ts
